# FastSAM

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ubuntu.yml  windows.yml
