[tool.poetry]
name = "fastsam"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = ">=3.2.2"
opencv-python = ">=4.6.0"
pillow = ">=7.1.2"
pyyaml = ">=5.3.1"
requests = ">=2.23.0"
scipy = ">=1.4.1"
torch = ">=1.7.0"
torchvision = ">=0.8.1"
tqdm = ">=4.64.0"
pandas = ">=1.1.4"
seaborn = ">=0.11.0"
gradio = "<=3.35.2"
ultralytics = "<=8.0.122"
openai-clip = "^1.0.1"
clip = {git = "https://github.com/openai/CLIP.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
